syntax = "proto3";

package wafservice;

service WafService {
  rpc EvalRequest (WafHttpRequest) returns (WafDecision) {}
  rpc PutConfig (WAFConfig) returns (PutConfigResponse) {}
}

message HeaderPair {
   string key = 1;
   string value = 2;
}

message WafHttpRequest {
  string method = 1;
  string uri = 2;
  repeated HeaderPair headers = 3;

  // TODO Use gRPC streaming instead of a simple string type
  bytes body = 4;
}

message WafDecision {
  bool allow = 1;
}

/*
 * A representation of AzWaf configuration.
 */

message WAFConfig {
  repeated SecRuleConfig secRuleConfigs = 1;
  repeated GeoDBConfig geoDBConfigs = 2;
  repeated IPReputationConfig ipReputationConfigs = 3;
}

message SecRuleConfig { 
  string id = 1;
  bool enabled = 2; 
}

message GeoDBConfig { 
  string id = 1;
  bool enabled = 2; 
}

message IPReputationConfig { 
  string id = 1;
  bool enabled = 2; 
}

message PutConfigResponse { 
  int64 version = 1;
}
